# eudaq_basler_camera

./: README.md
cmake/: FindPylon.cmake
user/: CMakeLists.txt
user/scintcamera/: CMakeLists.txt  scintcamera.kdev4
user/scintcamera/.kdev4/: scintcamera.kdev4
user/scintcamera/misc/: dummy.conf  dummy.ini  image_t=0_0  image_t=17_1  image_t=17_3  image_t=17_4  image_t=17_5  image_t=17_6  image_t=17_7  image_t=17_8  image_t=17_9  image_t=20_2  scintcam_run.sh
user/scintcamera/module/: CMakeLists.txt
user/scintcamera/module/src/: DummyProducer.cc  DummyRunControl.cc
